<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/text_to_speech"
            android:textColor="#B42E2E"
            android:textSize="30sp" />


        <EditText
            android:layout_below="@+id/tts"
            android:id="@+id/tts_ediText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:hint="@string/enter_your_word" />


        <Button
            android:elevation="3dp"
            android:enabled="true"
            android:id="@+id/btn_tts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tts_ediText"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:background="#0091EA"
            android:text="@string/speak"
            android:textColor="#DD2C00"
            android:textSize="25sp"
            android:textStyle="italic" />

        <Switch
            android:textColor="#1C276B"
            android:switchMinWidth="50dp"
            android:switchPadding="4dp"
            android:id="@+id/Switch_tts"
            android:textSize="20sp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_tts"
            android:layout_centerInParent="true"
            android:layout_marginTop="26dp"
            android:text="@string/switch_to_stt" />
    </RelativeLayout>

</ScrollView>