<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/speech_to_text"
            android:textColor="#B42E2E"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/stt_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stt"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:padding="30sp"
            android:text="@string/speak_something"
            android:textSize="28sp" />


        <ImageView
            android:id="@+id/voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stt_Text"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:onClick="getSpeechInput"
            android:src="@drawable/ic_mic_none_black_24dp"
            tools:ignore="OnClick" />

        <Switch
            android:id="@+id/Switch_stt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/voice"
            android:layout_centerInParent="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="70dp"
            android:padding="20dp"
            android:switchMinWidth="50dp"
            android:switchPadding="4dp"
            android:text="@string/switch_to_tts"
            android:textColor="#6200EA"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>